--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4",
-    "webpack-merge": "^5.10.0"
+    "webpack-merge": "^5.10.0",
+    "webpack-pwa-manifest": "^4.3.0"
   },
   "dependencies": {
     "regenerator-runtime": "^0.14.1"
