--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start-dev": "webpack serve --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
+    "build": "webpack --config webpack.prod.js",
+    "build-image": "node sharp.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +15,7 @@
     "@babel/preset-env": "^7.24.7",
     "@babel/preset-react": "^7.24.7",
     "babel-loader": "^9.1.3",
+    "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.1",
     "eslint": "^8.57.0",
@@ -21,6 +23,11 @@
     "eslint-plugin-import": "^2.29.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-webp-webpack-plugin": "^3.3.6",
+    "imagemin-webpack-plugin": "^2.4.2",
+    "install": "^0.13.0",
+    "sharp": "^0.33.4",
     "style-loader": "^4.0.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
@@ -34,6 +41,7 @@
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.7.2",
     "bulma": "^1.0.1",
+    "lazysizes": "^5.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
