--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "sharp": "^0.33.4",
     "style-loader": "^4.0.0",
     "webpack": "^5.91.0",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4",
     "webpack-merge": "^5.10.0",
@@ -42,6 +43,7 @@
     "axios": "^1.7.2",
     "bulma": "^1.0.1",
     "lazysizes": "^5.3.2",
+    "lodash.filter": "^4.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
