--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start-dev": "webpack serve --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "build-image": "node sharp.js"
+    "build-image": "node sharp.js",
+    "serve": "http-server dist --port 9000"
   },
   "author": "",
   "license": "ISC",
@@ -23,6 +24,7 @@
     "eslint-plugin-import": "^2.29.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
+    "http-server": "^14.1.1",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-webp-webpack-plugin": "^3.3.6",
     "imagemin-webpack-plugin": "^2.4.2",
@@ -34,7 +36,8 @@
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4",
     "webpack-merge": "^5.10.0",
-    "webpack-pwa-manifest": "^4.3.0"
+    "webpack-pwa-manifest": "^4.3.0",
+    "workbox-webpack-plugin": "^7.1.0"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^6.4.5",
@@ -49,6 +52,7 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
     "regenerator-runtime": "^0.14.1",
-    "web-vitals": "^4.1.0"
+    "web-vitals": "^4.1.0",
+    "workbox-window": "^7.1.0"
   }
 }
